--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 python-dotenv==1.0.1
-requests==2.32.5
 gradio==5.46.0
-langchain==0.3.15
-langchain-openai==0.3.2
-langchain-pinecone==0.2.2
+pinecone==6.0.0
+langchain==1.1.3
+langchain-openai==1.1.6
+langchain-pinecone==0.2.13
 pandas==2.3.2
+fastapi==0.124.2
+python-multipart==0.0.21
